--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -17,8 +17,10 @@
     "- Interest rate\n",
     "- Unemployment rate\n",
     "- Population\n",
-    "- working population\n",
-    "- GDP per Capita\n"
+    "- employment-population ratio\n",
+    "- GDP per Capita\n",
+    "- Housing unit started\n",
+    "- average rent price\n"
    ]
   },
   {
@@ -312,7 +314,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unemployment Rate"
+    "## Unemployment Rate\n",
+    "Data :https://fred.stlouisfed.org/series/UNRATE\n",
+    "\n",
+    "High unemployment rates can reduce the number of people who can afford to buy homes. This decrease in demand can lead to lower home prices.\n",
+    "Unemployed individuals may struggle to make mortgage payments, leading to an increase in mortgage defaults and foreclosures. This can increase the supply of homes for sale, putting downward pressure on prices."
    ]
   },
   {
@@ -457,7 +463,9 @@
     "## Population\n",
     "Data : https://fred.stlouisfed.org/series/POPTHM\n",
     "\n",
-    "UNITS  : thousands"
+    "UNITS  : thousands\n",
+    "\n",
+    " A growing population typically leads to increased demand for housing, which can drive up home prices, especially in areas with limited housing supply."
    ]
   },
   {
@@ -600,7 +608,10 @@
    "metadata": {},
    "source": [
     "## employment to population ratio\n",
-    "Data : https://fred.stlouisfed.org/series/EMRATIO"
+    "Data : https://fred.stlouisfed.org/series/EMRATIO\n",
+    "\n",
+    "A higher EPOP generally indicates a larger proportion of the population is employed, which can lead to higher overall income levels. Higher incomes can translate to increased demand for housing and potentially higher home prices.\n",
+    "\n"
    ]
   },
   {
@@ -1033,7 +1044,9 @@
    "metadata": {},
    "source": [
     "## Average rent price\n",
-    "DATA : https://fred.stlouisfed.org/series/CUSR0000SEHA"
+    "DATA : https://fred.stlouisfed.org/series/CUSR0000SEHA\n",
+    "\n",
+    "The CPI Rent reflects changes in the cost of renting primary residences, providing a direct measure of rental price trends which can impact housing demand and affordability. "
    ]
   },
   {
