--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -487,7 +487,7 @@
     "data['DATE'] = pd.to_datetime(data['DATE'])\n",
     "\n",
     "# Define the list of columns to plot against DATE\n",
-    "columns_to_plot = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avr_rent', 'price_proxy']\n",
+    "columns_to_plot = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avg_rent', 'price_proxy']\n",
     "\n",
     "# Set up the plotting area\n",
     "plt.figure(figsize=(14, 20))\n",
@@ -559,7 +559,7 @@
    ],
    "source": [
     "# Define the list of columns to plot against price_proxy\n",
-    "columns_to_plot = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avr_rent']\n",
+    "columns_to_plot = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avg_rent']\n",
     "\n",
     "# Set up the plotting area\n",
     "plt.figure(figsize=(14, 20))\n",
@@ -596,7 +596,7 @@
     "scaler = MinMaxScaler()\n",
     "\n",
     "# Define the columns to be normalized\n",
-    "columns_to_normalize = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avr_rent', 'price_proxy']\n",
+    "columns_to_normalize = ['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avg_rent', 'price_proxy']\n",
     "\n",
     "# Normalize the columns\n",
     "df[columns_to_normalize] = scaler.fit_transform(data[columns_to_normalize])\n"
@@ -644,7 +644,7 @@
     "import statsmodels.api as sm\n",
     "\n",
     "\n",
-    "X= data[['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avr_rent']]\n",
+    "X= data[['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avg_rent']]\n",
     "\n",
     "# Add a constant term for the intercept\n",
     "X = sm.add_constant(X)\n",
@@ -734,7 +734,7 @@
     "import pandas as pd\n",
     "\n",
     "# Assuming 'data' is your DataFrame\n",
-    "X = data[['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avr_rent']]\n",
+    "X = data[['interest_rates', 'population(in_thousand)', 'employment2pop_ratio', 'unemployment_rate', 'gdp_per_capita', 'housing_unit(in_thousand)', 'avg_rent']]\n",
     "y = data['price_proxy']\n",
     "\n",
     "# Initialize the Random Forest Regressor\n",
