--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[447 rows x 2 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "[839 rows x 2 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "[917 rows x 2 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "[784 rows x 2 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "[917 rows x 2 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "[309 rows x 2 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "[784 rows x 2 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "[520 rows x 2 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
        "[149 rows x 9 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        "      <th>unemployment_rate</th>\n",
        "      <th>gdp_per_capita</th>\n",
        "      <th>housing_unit(in_thousand)</th>\n",
-       "      <th>avr_rent</th>\n",
+       "      <th>avg_rent</th>\n",
        "      <th>price_proxy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1644,7 +1644,7 @@
        "147 2023-10-01            5.33                 335773.0                  60.3   \n",
        "148 2024-01-01            5.33                 336194.0                  60.2   \n",
        "\n",
-       "     unemployment_rate  gdp_per_capita  housing_unit(in_thousand)  avr_rent  \\\n",
+       "     unemployment_rate  gdp_per_capita  housing_unit(in_thousand)  avg_rent  \\\n",
        "0                  6.6         37132.0                     1774.0   121.200   \n",
        "1                  6.3         37454.0                     1614.0   122.200   \n",
        "2                  6.1         37685.0                     1575.0   123.000   \n",
@@ -1673,7 +1673,7 @@
        "[149 rows x 9 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
